Use URI, not URL; tstupka points out that e.g. ssh-protocol URIs will have no JRE handler.